--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
@@ -17,6 +18,7 @@
     "@angular/compiler": "~9.0.6",
     "@angular/core": "~9.0.6",
     "@angular/forms": "~9.0.6",
+    "@angular/localize": "~9.0.6",
     "@angular/material": "^9.2.0",
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
@@ -24,16 +26,20 @@
     "@auth0/angular-jwt": "^4.0.0",
     "@azure/msal-angular": "^1.0.0-beta.5",
     "@kolkov/ngx-gallery": "^1.0.11",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "@service-work/is-loading": "^3.0.3",
     "@syncfusion/ej2-angular-calendars": "^18.1.43",
     "alertifyjs": "^1.13.1",
+    "angular": "^1.8.0",
     "angular-feather": "^6.0.10",
+    "angular-ng-autocomplete": "^2.0.1",
     "angularx-qrcode": "^2.1.0",
     "bootstrap": "^4.4.1",
     "bootswatch": "^4.4.1",
     "faker": "^4.1.0",
     "font-awesome": "^4.7.0",
     "msal": "^1.2.2",
+    "ng-bootstrap": "^1.6.3",
     "ng2-file-upload": "^1.4.0",
     "ngx-barcode": "^0.2.4",
     "ngx-bootstrap": "^5.5.0",
@@ -45,7 +51,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.900.7",
-    "@angular/cli": "~9.0.6",
+    "@angular/cli": "^9.0.7",
     "@angular/compiler-cli": "~9.0.6",
     "@angular/language-service": "~9.0.6",
     "@types/jasmine": "~3.5.0",
