--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@kolkov/ngx-gallery": "^1.0.11",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "@service-work/is-loading": "^3.0.3",
+    "@sweetalert2/ngx-sweetalert2": "^8.1.1",
     "@syncfusion/ej2-angular-calendars": "^18.1.43",
     "alertifyjs": "^1.13.1",
     "angular": "^1.8.0",
@@ -45,6 +46,7 @@
     "ngx-bootstrap": "^5.5.0",
     "ngx-print": "^1.2.0-beta.4",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^10.11.0",
     "tslib": "^1.10.0",
     "xlsx": "^0.15.6",
     "zone.js": "~0.10.2"
@@ -69,5 +71,10 @@
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.7.5"
+  },
+  "bit": {
+    "env": {},
+    "componentsDefaultDirectory": "components/{name}",
+    "packageManager": "npm"
   }
 }
