--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "@angular/youtube-player": "^11.1.2",
     "@auth0/angular-jwt": "^4.0.0",
     "@azure/msal-angular": "^1.0.0-beta.5",
     "@kolkov/ngx-gallery": "^1.0.11",
