--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxyconfig.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
     "@angular/youtube-player": "^11.1.2",
+    "@apollo/client": "^3.3.13",
     "@auth0/angular-jwt": "^4.0.0",
     "@azure/msal-angular": "^1.0.0-beta.5",
     "@kolkov/ngx-gallery": "^1.0.11",
@@ -31,15 +32,23 @@
     "@service-work/is-loading": "^3.0.3",
     "@sweetalert2/ngx-sweetalert2": "^8.1.1",
     "@syncfusion/ej2-angular-calendars": "^18.1.43",
+    "JSX": "^1.1.0",
     "alertifyjs": "^1.13.1",
     "angular": "^1.8.0",
     "angular-feather": "^6.0.10",
     "angular-ng-autocomplete": "^2.0.1",
     "angularx-qrcode": "^2.1.0",
+    "apollo-angular": "^2.4.0",
+    "apollo-angular-link-http": "^1.11.0",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-ws": "^1.0.20",
     "bootstrap": "^4.4.1",
     "bootswatch": "^4.4.1",
     "faker": "^4.1.0",
     "font-awesome": "^4.7.0",
+    "graphql": "^15.5.0",
+    "jsx": "^0.9.89",
     "msal": "^1.2.2",
     "ng-bootstrap": "^1.6.3",
     "ng2-file-upload": "^1.4.0",
@@ -47,6 +56,8 @@
     "ngx-bootstrap": "^5.5.0",
     "ngx-print": "^1.2.0-beta.4",
     "ngx-webcam": "^0.3.2",
+    "preact": "^10.5.13",
+    "react": "^17.0.2",
     "rxjs": "~6.5.4",
     "sweetalert2": "^10.11.0",
     "tslib": "^1.10.0",
