--- a/angular.json
+++ b/angular.json
@@ -65,7 +65,9 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "DatingApp-SPA:build"
+            "browserTarget": "DatingApp-SPA:build",
+            "proxyConfig": "proxy.conf.json" ,
+            "disableHostCheck": true
           },
           "configurations": {
             "production": {
