--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.6",
+    "@angular-material-components/color-picker": "^6.0.0",
+    "@angular/animations": "^9.0.7",
     "@angular/cdk": "^9.2.0",
     "@angular/common": "~9.0.6",
     "@angular/compiler": "~9.0.6",
@@ -55,10 +56,14 @@
     "ng2-file-upload": "^1.4.0",
     "ngx-barcode": "^0.2.4",
     "ngx-bootstrap": "^5.5.0",
+    "ngx-color": "^6.2.0",
+    "ngx-color-picker": "^11.0.0",
+    "ngx-colors": "^2.7.1",
     "ngx-print": "^1.2.0-beta.4",
     "ngx-webcam": "^0.3.2",
     "preact": "^10.5.13",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "rxjs": "~6.5.4",
     "sweetalert2": "^10.11.0",
     "tslib": "^1.10.0",
