--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "ngx-color": "^6.2.0",
     "ngx-color-picker": "^11.0.0",
     "ngx-colors": "^2.7.1",
+    "ngx-pagination": "^5.1.1",
     "ngx-print": "^1.2.0-beta.4",
     "ngx-webcam": "^0.3.2",
     "preact": "^10.5.13",
